src/tests/testfiles/function-declarations/3.txt
Error at 6:1: Redefinition of function 'f'
float f(int a, int b) {
^
Error at 10:1: Redefinition of function 'f'
char f(int a, int b) {
^
